[tool.poetry]
name = "greenhack"
version = "0.1.15"
description = ""
authors = ["pwtail <abvit89s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
greenlet = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
